# Project-Obsidian-Knowledge-Graph

./: .gitignore  DEVELOPMENT.md  MCP_USAGE.md  README.md  build.bat  dev.bat  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: embeddings.rs  graph.rs  ingest.rs  lib.rs  mcp_server.rs
src/components/: GraphCanvas.tsx  NodeDetail.tsx  PetWidget.tsx  SessionHistory.tsx
src/hooks/: useGraph.ts
