[package]
name = "cortex"
version = "0.1.0"
description = "Cortex — Local Knowledge Graph & Agent Memory"
authors = []
edition = "2021"

[lib]
name = "cortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
once_cell = "1"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
ndarray = "0.17"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
